crates/symbolicator-service/tests/integration/snapshots/integration__sourcemap__sourcemap_source_expansion.snap
---
source: crates/symbolicator-service/tests/integration/sourcemap.rs
assertion_line: 152
expression: response
---
stacktraces:
  - frames:
      - function: "function: \"HTMLDocument.<anonymous>\""
        filename: index.html
        abs_path: "http://example.com/index.html"
        lineno: 283
        colno: 17
        in_app: false
      - function: add
        filename: file1.js
        abs_path: "http://example.com/file1.js"
        lineno: 3
        colno: 9
        pre_context:
          - "function add(a, b) {"
          - "\t\"use strict\";"
        context_line: "\treturn a + b; // fôo"
        post_context:
          - "}"
        data:
          sourcemap: "http://example.com/file.min.js.map"
raw_stacktraces:
  - frames:
      - function: "function: \"HTMLDocument.<anonymous>\""
        filename: index.html
        abs_path: "http://example.com/index.html"
        lineno: 283
        colno: 17
        in_app: false
      - filename: file.min.js
        abs_path: "http://example.com/file.min.js"
        lineno: 1
        colno: 39
        context_line: "function add(a,b){\"use strict\";return a+b}function multiply(a,b){\"use strict\";return a*b}function divide(a,b){\"use strict\";try{return multip {snip}"
        post_context:
          - //@ sourceMappingURL=file.min.js.map
errors:
  - abs_path: "http://example.com/index.html"
    type: scraping_disabled

